fix (desktop => contacts button): remove bg flickering on hover

--- a/src/components/contacts/contacts.scss
+++ b/src/components/contacts/contacts.scss
@@ -189,6 +189,7 @@
       position: absolute;
       left: 0;
       top: 0;
+      transform: translateZ(0);
       border-radius: 30px;
       background-image: linear-gradient(89deg, #00b4ff 0%, #9c00ff 100%);
       z-index: 0;
@@ -201,6 +202,7 @@
       position: absolute;
       left: 0;
       top: 0;
+      transform: translateZ(0);
       border-radius: 30px;
       background-image: linear-gradient(-89deg, #00b4ff 0%, #9c00ff 100%);
       z-index: 0;
